Few more changes

--- a/Core2ADFSAuth/appsettings.json
+++ b/Core2ADFSAuth/appsettings.json
@@ -1,7 +1,7 @@
 ﻿{
 	"OpenIDAuthentication": {
 		"ClientId": "09249151-4368-43dd-b0c6-8851c1eb67c1",
-		"ClientSecret": "",
+		"ClientSecret": "lA9AljBX1mBWLblEqAXqX2rWVXjdKVfJ67eCtTMx",
 		"Authority": "https://dadfs.dev.activedisclosure.com/adfs",
 		"Metadata": "https://dadfs.dev.activedisclosure.com/adfs/.well-known/openid-configuration",
 		"PostLogoutRedirectUri": "http://localhost:5000",
